<resources>
    <string name="app_name">Daily-Work</string>
    <string name="app_Name">Daily-Work</string>
    <string name="info">Info</string>
    <string name="preferencias">Preferences</string>
    <string name="autor">Author: João Carlos Pirolo</string>
    <string name="describe">Mobile application to control activities related to fixed line and ADSL internet services, created to meet the requirements to obtain approval of the Mobile Programming discipline.</string>
    <string name="addServico">New Service</string>
    <string name="Servicos">Services</string>

    <string name="numba">Number of Ba</string>
    <string name="city">City</string>
    <string name="ard">Wardrobe</string>
    <string name="categoriasDeServico">Service Performed</string>
    <string name="apagar_servico">Delete Services</string>
    <string name="editar_servicos">Edit Services</string>
    <string name="tipoDeServico">Type of Services</string>
    <string name="deletar_categoria_de_servico">Delete Category of Services</string>
    <string name="editar_categoria">Edit Category</string>
    <string name="CategoriaDeServicos">Type of Services</string>
    <string name="add_servico">Register</string>
    <string name="novo_servico">New Service</string>
    <string name="editarServico">Update Service</string>
    <string name="numBa_vazio">BA is empty</string>
    <string name="addCategoriaServico">add_Category_of_Service</string>
    <string name="notificacao">Notification</string>
    <string name="ok">OK</string>
    <string name="sim">Yes</string>
    <string name="nao">No</string>
    <string name="armario_vazio">ARD is Empty!</string>
    <string name="cidade_vazio">City is Empty!</string>
    <string name="tipo_servico_vazio">Type of Service is Empty!</string>
    <string name="nova_categoria">New Type of Service</string>
    <string name="atualiza_categoria">Update Type of Service</string>
    <string name="red">RED</string>
    <string name="green">GREEN</string>
    <string name="gray">GRAY</string>
    <string name="confirmar">Confirm</string>
    <string name="gravar">Save</string>

</resources>
